Update to SpongeAPI 12